chore: Renames project to dada-js.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "td-js",
+  "name": "dada-js",
   "version": "1.1.1",
   "description": "Test doubles utility library for your testing needs.",
   "main": "index.js",
