--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "precommit": "pretty-quick --staged",
     "prepush": "yarn test"
   },
+  "dependencies": {
+    "lodash": "4.17.11"
+  },
   "devDependencies": {
     "chai": "4.1.2",
     "husky": "0.14.3",
-    "lodash": "4.17.11",
     "mocha": "5.2.0",
     "prettier": "1.14.2",
     "pretty-quick": "1.6.0"
