--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
+    "build": "ncc build dada.js --minify -o build/ && mv build/index.js .",
+    "pretest": "yarn build",
     "test": "mocha test/*.test.js",
     "precommit": "pretty-quick --staged",
     "prepush": "yarn test"
@@ -15,10 +17,11 @@
     "lodash": "4.17.11"
   },
   "devDependencies": {
-    "chai": "4.1.2",
-    "husky": "0.14.3",
-    "mocha": "5.2.0",
-    "prettier": "1.14.2",
-    "pretty-quick": "1.6.0"
+    "@zeit/ncc": "0.18.5",
+    "chai": "4.2.0",
+    "husky": "2.4.1",
+    "mocha": "6.1.4",
+    "prettier": "1.18.2",
+    "pretty-quick": "1.11.0"
   }
 }
