--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "precommit": "pretty-quick --staged",
     "prepush": "yarn test"
   },
-  "dependencies": {
-    "lodash": "4.17.11"
-  },
   "devDependencies": {
     "@zeit/ncc": "0.18.5",
     "chai": "4.2.0",
@@ -23,5 +20,13 @@
     "mocha": "6.1.4",
     "prettier": "1.18.2",
     "pretty-quick": "1.11.0"
-  }
+  },
+  "keywords": [
+    "test doubles",
+    "unit test",
+    "test",
+    "mocks",
+    "stubs",
+    "spies"
+  ]
 }
